syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "ProductsService.API.Protos";

package products;

service Products {
	rpc GetProduct (ProductByIdRequest) returns (ProductByIdResponse);

	rpc TakeProducts (ProductsListRequest) returns (ProductsListResponse);

	rpc TakeOneProduct (ProductRequest) returns (ProductResponse);
}

message ProductsListRequest{
	repeated ProductRequest products = 1;
}

message ProductsListResponse{
	repeated ProductResponse products = 1;
}

message ProductByIdRequest{
	string id = 1; 
}

message ProductByIdResponse{
	string id = 1;
	string name = 2;
	double price = 3;
	int32 quantity = 4;
	repeated ProductImageResponse images = 5;
	string userId = 6;
}

message ProductRequest{
	string id = 1;
	int32 quantity = 2;
}

message ProductResponse{
	string id = 1;
	string name = 2;
	double price = 3;
	int32 takedQuantity = 4;
	string userId = 5;
}

message ProductImageResponse{
	string id = 1;
	string imageUrl = 2;
}
